--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "language-tutalk",
-  "version": "0.0.0",
+  "version": "0.2.0",
   "description": "Support for TuTalk scenario language in Atom",
   "engines": {
     "atom": "*"
   },
   "dependencies": {},
-  "repository": {},
-  "bugs": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ckot/language-tutalk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ckot/language-tutalk/issues"
+  },
   "license": "Proprietary"
 }
